--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,35 +1,67 @@
-.contentSobre {
-position: absolute;
-background-color: #e1e1e1;
-text-align: center;
-justify-content: center;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-.contentSobre p{
-width: 80%;
+.content {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto auto auto;
+    grid-template-areas: 
+      "title title"
+      "sobre imagem"
+      "footer footer";
+    margin-bottom: 200px;
+    }
+.content p{
 margin: 0 10% 20px 10%;
 line-height: 35px;
 font-size: 15px;
 text-align: justify;
+grid-area: sobre;
+grid-row: 2;
 }
-.textSobre{
-display: inline-grid;
-grid-template-columns: 1fr 1fr;
-justify-items: center;
-}
-.textSobre img {
-    position: relative;
+.content img {
+grid-area: imagem;
+grid-row: 2;
 max-height: 800px;
 height: auto;
 width: auto;
-margin-bottom: 200px;
 }
-.contentSobre h1{
-
-margin-top: 60px;
-font-size: 70px;
+.content h1{
+font-size: 80px;
 color: #545454;
-display: grid;
-grid-template-columns: 1fr;
-position: relative;
+grid-area: title;
+grid-row: 1;
+display: inline-block;
+text-align: center;
+}
+.indiqueHorta {
+    grid-area: footer;
+    grid-row: 3;
+    resize:horizontal; 
+    width:300px;
+    height: 25px;
+    position: absolute;
+    border-radius: 7px;
+    padding-left: 10px;
+    margin-top: 10px;
+    padding-left: 6.66%;
+}
+.formIndicacao {
+    position: relative;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: 1;
+
+}
+.formIndicacao input {
+    margin-right: 10px;
+}
+.submit {
+    width: 100%;
+    padding: 7px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    background-color: #7dad74;
+    cursor: pointer;
+    outline: none;
+    height: 25px;
 }
